--- a/hack3/frontend/package.json
+++ b/hack3/frontend/package.json
@@ -3,18 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.6",
+    "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.62",
+    "@mui/material": "^5.2.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-link-ws": "^1.0.20",
+    "graphql": "^16.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "subscriptions-transport-ws": "^0.11.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nodemon src/index.js --ext js,graphql --exec babel-node",
+    "frontend": "cd ./frontend && npm start",
+    "backend": "cd ./backend && npm start",
+    "test": "npx cypress run --browser=firefox --spec cypress/integration/*.spec.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
